[build-system]
build-backend = "poetry.masonry.api"
requires = ["poetry>=0.12"]

[tool]
[tool.poetry]
authors = ["Your Name <you@example.com>"]
description = ""
name = "shrimpbot"
version = "0.1.0"
[tool.poetry.dependencies]
discord = "^1.0"
flask = "^1.1"
python = "^3.8"
decorator = "^4.4.2"
[tool.poetry.dev-dependencies]
